Fix Opera issues with duplicated scrollbar and invisible border

--- a/skins/default/mail.css
+++ b/skins/default/mail.css
@@ -299,6 +299,7 @@
   bottom: 0px;
   border: 1px solid #999999;
   background-color: #F9F9F9;
+  overflow: hidden;
 }
 
 #messagecontframe
